# samc2

./: CMakeLists.txt  README.md  SAMCConfig.h.in  samc-config.cxx
cmake/: General.cmake  Physics.cmake
include/: SAMC.h  SAMCAnalyzerOptics.h  SAMCConstants.h  SAMCEvent.h  SAMCEventGenerator.h  SAMCFortran.h  SAMCGeneral_LinkDef.h  SAMCManager.h  SAMCMaterial.h  SAMCMatrixElement.h  SAMCPropagator.h  withxycollimator.h
main/: c12_input.conf
src/: SAMC.C  SAMCAnalyzerOptics.C  SAMCConstants.C  SAMCEvent.C  SAMCEventGenerator.C  SAMCManager.C  SAMCMaterial.C  SAMCMatrixElement.C  SAMCPropagator.C  main.C
yaml_test/: c12_input.conf  compile  main.cxx
